Finished project v2 - fix overflow bug

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -46,6 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
   justify-content: center;
   flex: 1;
 }
